k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brewmaster-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
  - hosts:
    - staging.brewmaster-pos.com
    secretName: brewmaster-tls-cert
  rules:
  - host: staging.brewmaster-pos.com
    http:
      paths:
      # Perutean ke Backend Core API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: brewmaster-backend
            port:
              number: 3001
      # Perutean default ke Frontend Nginx Web Server
      - path: /
        pathType: Prefix
        backend:
          service:
            name: brewmaster-frontend
            port:
              number: 80
